--- a/alphablog/Gemfile
+++ b/alphablog/Gemfile
@@ -29,7 +29,10 @@ gem "jbuilder"
 # Bootstrap build
 gem 'bootstrap' , '~>5.3.2'
 
+
+# build sassc-rails 
 gem 'sassc-rails'
+
 
 
 # Use Redis adapter to run Action Cable in production
